--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.2",
     "axios": "^0.27.2",
     "pinia": "^2.0.21",
     "socket.io-client": "^4.5.2",
